2007-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Use numbered prefix argument to
	move the parent directory according to input number.

2007-04-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add food group;
	remove life.food and shopping.kishi groups; move subgroups of
	book, business, car, culture, digital and edu groups to
	shimbun-asahi-subgroups-alist.
	(shimbun-asahi-subgroups-alist): Add subgroups for book, business,
	car, culture, digital, edu and food groups.
	(shimbun-asahi-get-headers): Remove shopping.kishi stuff.
	(shimbun-asahi-prepare-article): Add start and end flags for
	culture subgroups; remove ads for car, digital and food groups;
	use from header to split subgroups; remove shopping.kishi stuff.

2007-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add book.asahi,
	book.business, book.clip, book.fair, book.mybook, book.rss groups;
	remove BOOK: prefix; update regexps for book.* and rss groups.
	(shimbun-asahi-subgroups-alist): Add subgroups for book.paperback
	group.
	(shimbun-index-url): Return about:blank if there's no url.
	(shimbun-asahi-get-headers): Work even if there's no regexp; work
	with book.rss group; simplify From for rss groups.
	(shimbun-asahi-prepare-article): Work with revised editorial and
	tenjin groups.

2007-03-31  Andreas Seltenreich  <seltenreich@gmx.de>

	* w3m.el (w3m-external-view-file): Actually kill the temporary
	buffer.

2007-03-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-ems.el (w3m-tab-mouse-track-selected-tab): Sleep anyway.
	(w3m-tab-make-keymap): Add key-bindings for mouse wheel-up|down to
	w3m-mode-map.

2007-03-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el (report-emacs-w3m-bug-system-informations): Add gtk.
	(report-emacs-w3m-bug): Bind print-quoted to t.

	* w3m-ems.el (w3m-force-window-update): Do split-window-vertically