@@ -168,7 +168,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1265 $"))
+    (let ((rev "$Revision: 1.1266 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1136))
 	   (format "1.4.%d" (+ rev 50)))))
@@ -6650,10 +6650,11 @@ a page in a new buffer with the correct width."
   (interactive "p")
   (unless arg (setq arg 1))
   (when (and (/= arg 0) (eq major-mode 'w3m-mode))
-    (let ((buffers (w3m-list-buffers)))
+    (let* ((buffers (w3m-list-buffers))
+	   (len (length buffers)))
       (switch-to-buffer
-       (nth (mod (+ arg (w3m-buffer-number (current-buffer)) -1)
-		 (length buffers))
+       (nth (mod (+ arg (- len (length (memq (current-buffer) buffers))))
+                 len)
 	    buffers)))
     (run-hooks 'w3m-select-buffer-hook)
     (w3m-select-buffer-update)))
